--- a/style.css
+++ b/style.css
@@ -696,7 +696,7 @@ a:focus::after {
   
     }
     @media (max-width: 768px) {
-      .calenderimg img{
+      .react-activity-calendar img{
         width: 100%;
       }
       #menu-icon {
