--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 p{
   color: white;
 }
+.container img{
+width: 100%;
+}
 
 
 * {
@@ -21,9 +24,10 @@ p{
   }
   
   body {
-    background:rgb(128, 75, 0);
+    
     color: var(--text-color);
-    background-image: url("https://scitechdaily.com/images/Universe-Astronomy-Art-Concept-777x518.jpg?ezimgfmt=ng:webp/ngcb2");
+    background-color: 			black;
+    /* background-image: url("https://scitechdaily.com/images/Universe-Astronomy-Art-Concept-777x518.jpg?ezimgfmt=ng:webp/ngcb2"); */
     /* color: var(--text-shadow-red); */
   
   }
@@ -649,7 +653,8 @@ a:focus::after {
     @media (max-width: 1200px) {
       .calenderimg img{
         width: 100%;
-        background-color: #78c4e7;
+       
+        
         border: none;
       }
       html {
@@ -661,19 +666,19 @@ a:focus::after {
       .header {
         padding: 2rem 3%;
         background-color: #0a1406;
-        background-image:url("https://media.istockphoto.com/id/1411914926/photo/milky-way-reflected-by-crater-lake.jpg?s=1024x1024&w=is&k=20&c=gvONV_Ui0Xaj1M6cJW91FYq9zQT7HkyCWIVdlUri4Pc=")
+      
       }
       section {
         padding: 10rem 3% 2rem;
-        background-color: skyblue;
+        background-color: black;
       }
       .skills {
         padding-bottom: 7rem;
-        background-image:url("https://media.istockphoto.com/id/1411914926/photo/milky-way-reflected-by-crater-lake.jpg?s=1024x1024&w=is&k=20&c=gvONV_Ui0Xaj1M6cJW91FYq9zQT7HkyCWIVdlUri4Pc=") ;
+    
       }
       .project {
         padding-bottom: 7rem;
-        background-image: url("https://media.istockphoto.com/id/855749040/photo/northern-lights.jpg?s=612x612&w=0&k=20&c=eoMozAgAtiYrT1n1CHIBMOe-MxIuRvVrU5ItAOjHDnA=");
+       
       }
       .contact {
         min-height: auto;
@@ -682,31 +687,51 @@ a:focus::after {
         padding: 2rem 3%;
       }
       #github-streak-stats {
-        width: 80%;
+        width: 100%;
         
       }
       #github-stats-card {
-        width: 80%;
+        width: 100%;
       }
       #github-top-langs {
-        width: 80%;
+        width: 100%;
       }
   
   
   
     }
     @media (max-width: 768px) {
+      .container{
+        width: 100%;
+       
+      }
+
       .react-activity-calendar{
         width:100%;
-        border: 2px solid red;
+       height: 200px;
+      
         display: flex;
         justify-content: center;
         align-items: center;
+      
         
-      }
-      .react-activity-calendar img{
+      } 
+      .calenderimg{
+        position: relative;
         width: 100%;
-        height: 100%;
+        height: 200px;
+        margin-right: 20px;
+        border-radius: 2px ;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .calenderimg >img{
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+       
+     
         
       }
       
@@ -827,4 +852,5 @@ a:focus::after {
 
     .calenderimg img{
       width: 100%;
+      
     }
