--- a/style.css
+++ b/style.css
@@ -784,6 +784,15 @@ a:focus::after {
       .calenderimg img{
         width: 100%;
       }
+      #about{
+        word-spacing: normal;
+     text-align: justify;
+     line-height: 0.5;
+     letter-spacing: 0px;
+     font-size: 5px;
+     
+     
+      }
      
      
   .contact form .input-box input {
